--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,7 @@ dependencies {
 	compile fileTree(dir: './libs', include: '*.jar')
 	compile 'com.google.guava:guava:19.0'
 	compile 'com.fasterxml.jackson.core:jackson-databind:2.6.3'
-	//compile 'org.codehaus.mojo:keytool-api-1.7:1.5'
+	compile 'org.shredzone.acme4j:acme4j-utils:0.8'
 	compile 'org.apache.maven.shared:maven-shared-utils:0.2'
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
